<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Norman</string>
    <string name="title_activity_norman">Norman</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="title_activity_add">New Message</string>
    <string name="action_default">Make Default</string>
    <string name="leaving">Leaving</string>
    <string name="arriving">Arriving</string>
    <string name="contact_hint">Contact name, phone #, etc.</string>
    <string name="proximity">Proximity (miles)</string>
    <string name="time_range">Limit to time range</string>
    <string name="place_hint">Place</string>

    <string-array name="repeat_options">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>

</resources>
